assign1/tests/type-checking/bad/type-as-global-name.c
#include "FenneC.h"

int main() {
    int int i = 4;
    int unsigned i = 4;
    int void i = 4;
    return 0;
}